<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationAlert">
    <LinearLayout
        android:id="@+id/ll_alert_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <LinearLayout
            android:id="@+id/ll_alert_inputs_destination_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_inputs_destination_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_latitude" />

            <EditText
                android:id="@+id/edt_alert_inputs_destination_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Ex: 12.34567"
                android:digits="1234567890.-"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="9"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alert_inputs_destination_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_inputs_destination_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/destination_longitude" />

            <EditText
                android:id="@+id/edt_alert_inputs_destination_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Ex: 12.34567"
                android:digits="1234567890.-"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="9"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alert_inputs_destination_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alert_inputs_destination_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_distance" />

            <EditText
                android:id="@+id/edt_alert_inputs_destination_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Ex: 12.34567"
                android:digits="1234567890."
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="9"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_alert_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_alert_inputs"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_btn_alert_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/calculate"
            android:src="@drawable/bell"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <ImageButton
            android:id="@+id/img_btn_alert_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/clear"
            android:src="@drawable/cancel"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_alert_outputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_alert_buttons"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/current_location"
                android:src="@drawable/location" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_alert_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Current Location"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/destination_location"
                android:src="@drawable/target" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_alert_destination_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/destination_location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/destination_location"
                android:src="@drawable/distance_between_2_location" />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />


            <TextView
                android:id="@+id/tv_alert_air_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/air_distance" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>